# captain-raccoon

./: .env.example  .gitignore  Dockerfile  Procfile  canvas_particles.html  docker-compose.yml  particles.html  pyproject.toml  requirements.txt
.github/workflows/: deploy_pages.yml  generate_episode.yml  scheduled_pipeline.yml
captain_raccoon/config/: character.yaml  pipeline.yaml  settings.py
captain_raccoon/database/: models.py  repository.py
captain_raccoon/engines/: assembly_engine.py  audio_engine.py  image_engine.py  scene_engine.py  story_engine.py  video_engine.py
captain_raccoon/monitoring/: setup.py
captain_raccoon/orchestrator/: pipeline.py  scheduler.py
captain_raccoon/publishers/: instagram_publisher.py  youtube_publisher.py
captain_raccoon/utils/: logger.py  retry.py  storage.py
docs/superpowers/plans/: 2026-03-30-harbor-world-3d.md
docs/superpowers/specs/: 2026-03-30-harbor-world-3d-design.md
mini_pipeline/: .env.example  config.py  generators.py  pipeline.py  publishers.py
scripts/: generate_episode.py
web/: README.md  brand.md  next.config.ts  package-lock.json  package.json
web/public/: antigravity-particles.html
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/promo/: page.tsx
web/src/components/sections/: CharacterSection.tsx  FooterSection.tsx  GallerySection.tsx  HeroSection.tsx  LiveEpisodeSection.tsx  MapSection.tsx  ParticipationSection.tsx  (+1 more)
web/src/hooks/: useCarouselScroll.test.ts  useCarouselScroll.ts  useIsCoarsePointer.ts
web/src/lib/: asset-path.ts  design-tokens.ts
web/src/test/: setup.ts
(+13 files in other folders)
