[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "captain-raccoon"
version = "1.0.0"
description = "AI-powered animated short-form content pipeline for Captain Raccoon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["captain_raccoon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
